docs: swagger @route=api/v1/auth users
