# handler/handler.go
@@ -133,3 +133,10 @@ func (h *todoHandler) All_Todos(c *fiber.Ctx) error {
 
 	return c.Status(fiber.StatusOK).JSON(result)
 }
+
+type Register struct {
+	Email     string `json:"email" validate:"required,email"`
+	Password  string `json:"password" validate:"required,min=6,max=32"`
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+}
